# pubmed-mcp

./: .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  PRODUCTION_ROADMAP.md  README.md  ci_simulation.sh  env.example  pyproject.toml  pytest.ini  requirements.txt  run_tests.py  setup.py  test_critical_issues.py  test_server.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
integration_tests/: README.md  test_server_integration.py
src/: __init__.py  citation_formatter.py  main.py  models.py  pubmed_client.py  server.py  tool_handler.py  tools.py  utils.py
tests/: README.md  __init__.py  conftest.py  test_citation_formatter.py  test_main.py  test_models.py  test_pubmed_client.py  test_pubmed_client_extended.py  test_server.py  test_server_extended.py  test_tool_handler.py  test_tool_handler_extended.py  test_utils.py
